# perf-glance

./: .gitignore  Ideas.md  LICENSE  README.md  grouping.md  perf-glance  pyproject.toml  spec.md
docs/: Ideas.md  TODO.md  dev.md  grouping.md  rules.md
rules/builtin.d/: 10-apps.toml  12-apps-macos-signal.toml  20-tools.toml  30-system-macos.toml  30-system.toml  31-system-macos-overrides.toml  33-system-macos-comms.toml  36-system-macos-appstore.toml  37-system-macos-desktop.toml  38-system-macos-security-ext.toml  50-lists.toml
src/perf_glance/: __init__.py  __main__.py  app.py  config.py  dump_groups.py  perf_glance.css  psutil_linux.py
src/perf_glance/collectors/: __init__.py  cpu.py  memory.py  processes.py  temperature.py
src/perf_glance/collectors/darwin/: cpu.py  memory.py  processes.py  temperature.py
src/perf_glance/collectors/linux/: cpu.py  memory.py  processes.py  temperature.py
src/perf_glance/grouping/: __init__.py  app_bundles.py  cgroups.py  desktop_entries.py  patterns.py  process_groups.py  rules_loader.py
src/perf_glance/grouping/rules/: __init__.py
src/perf_glance/grouping/rules/builtin.d/: 11-apps-macos.toml  13-apps-macos-misc.toml  30-system.toml  (+8 more)
src/perf_glance/utils/: __init__.py  graph_render.py  humanize.py
src/perf_glance/widgets/: __init__.py  cpu_section.py  memory_section.py  process_section.py
tests/: __init__.py  record_dump_groups_fixture.py  test_app_bundles.py  test_collectors.py  test_collectors_darwin.py  test_dump_groups_snapshot.py  test_grouping.py  test_process_section.py  test_rules_loader.py  test_utils.py
