[project]
name = "perf-glance"
version = "0.2.0"
description = "A terminal-based, holistic system utilization monitor for Linux and macOS"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
perf-glance = "perf_glance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perf_glance"]

[tool.hatch.build.targets.wheel.force-include]
"rules/builtin.d" = "perf_glance/grouping/rules/builtin.d"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
    "textual-dev>=0.40.0",
]
